--- a/data/po/cs.po
+++ b/data/po/cs.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: SuperTuxKart\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-07-24 15:48+0800\n"
-"PO-Revision-Date: 2019-07-24 16:41+0000\n"
+"POT-Creation-Date: 2019-08-08 16:41+0800\n"
+"PO-Revision-Date: 2019-08-12 07:32+0000\n"
 "Last-Translator: Benau\n"
 "Language-Team: Czech (http://www.transifex.com/supertuxkart/supertuxkart/language/cs/)\n"
 "MIME-Version: 1.0\n"
@@ -989,7 +989,7 @@ msgstr ""
 #. I18N: ./data/gui/screens/download_assets.stkgui
 #. I18N: In the download assets screen, download options of assets
 msgid "Include all tracks"
-msgstr ""
+msgstr "Zahrnout všechny tratě"
 
 #. I18N: ./data/gui/screens/download_assets.stkgui
 #. I18N: In the download assets screen, download options of assets
@@ -1493,7 +1493,7 @@ msgid ""
 "Mass - there are three classes of karts, depending on their mass: light, "
 "medium and heavy. Heavier karts are less affected by parachutes and are more"
 " resistant to explosions."
-msgstr ""
+msgstr "Hmotnost - existují tři třídy motokár, v závislosti na jejich hmotnosti: lehké, střední a těžké. Těžší motokáry jsou méně ovlivněny padáky a jsou odolnější vůči výbuchům."
 
 #. I18N: ./data/gui/screens/help6.stkgui
 #. I18N: In the help menu
@@ -2076,7 +2076,7 @@ msgstr "Minimapa"
 #. I18N: ./data/gui/screens/options_ui.stkgui
 #. I18N: In the ui settings
 msgid "Font size"
-msgstr ""
+msgstr "Velikost písma"
 
 #. I18N: ./data/gui/screens/options_ui.stkgui
 #. I18N: In the ui settings
@@ -2373,7 +2373,7 @@ msgstr "Tekuté písky"
 
 #. I18N: ../stk-assets/tracks/scotland/track.xml
 msgid "Nessie's Pond"
-msgstr ""
+msgstr "Jezero Lochnesky"
 
 #. I18N: ../stk-assets/tracks/snowmountain/track.xml
 msgid "Northern Resort"
@@ -3255,7 +3255,7 @@ msgstr "Dokončili jste závod!"
 msgid "%s left the game."
 msgstr "%s opustil(a) hru."
 
-#: src/main.cpp:1866
+#: src/main.cpp:1840
 msgid ""
 "SuperTuxKart may connect to a server to download add-ons and notify you of "
 "updates. We also collect anonymous hardware statistics to help with the "
@@ -3266,16 +3266,16 @@ msgid ""
 "statistics\")."
 msgstr "SuperTuxKart se může připojit k serveru pro stahování zásuvných modulů a upozornit vás o aktualizacích. Také shromažďujeme anonymní statistiky ohledně parametrů počítače za účelem pomoci s rozvojem STK. Přečtěte si prosím naše zásady ochrany osobních údajů na http://privacy.supertuxkart.net. Chtěli byste tuto funkci povolit? (Budete-li chtít změnit toto nastavení později, přejděte na Možnosti, zvolte záložku 'Obecné', a upravte volby \"Připojit k Internetu\" a \"Odesílat anonymní statistiky ohledně hardwaru\")."
 
-#: src/main.cpp:2134
+#: src/main.cpp:2108
 msgid "Your screen resolution is too low to run STK."
 msgstr "Vaše rozlišení obrazovky je příliš nízké pro spuštění STK."
 
-#: src/main.cpp:2166
+#: src/main.cpp:2140
 msgid ""
 "Your driver version is too old. Please install the latest video drivers."
 msgstr "Ovladač grafické karty, který je nyní používán na tomto systému, je zastaralý. Nainstalujte jeho nejnovější verzi."
 
-#: src/main.cpp:2184
+#: src/main.cpp:2158
 #, c-format
 msgid ""
 "Your graphics driver appears to be very old. Please check if an update is "
@@ -3708,7 +3708,7 @@ msgid "Please wait while addons are updated"
 msgstr "Chvíli strpení, aktualizují se doplňky"
 
 #: src/states_screens/addons_screen.cpp:498
-#: src/states_screens/main_menu_screen.cpp:564
+#: src/states_screens/main_menu_screen.cpp:575
 msgid ""
 "Sorry, an error occurred while contacting the add-ons website. Make sure you"
 " are connected to the Internet and that SuperTuxKart is not blocked by a "
@@ -4170,6 +4170,7 @@ msgid "featured"
 msgstr "oblíbené"
 
 #: src/states_screens/dialogs/addons_loading.cpp:174
+#: src/states_screens/dialogs/download_assets.cpp:106
 #, c-format
 msgid "%s MB"
 msgstr "%s MB"
@@ -4180,12 +4181,15 @@ msgstr "%s MB"
 msgid "%s KB"
 msgstr "%s KB"
 
+#. I18N: File size of game assets or addons downloading
 #: src/states_screens/dialogs/addons_loading.cpp:186
+#: src/states_screens/dialogs/download_assets.cpp:108
 #, c-format
 msgid "Size: %s"
 msgstr "Velikost: %s"
 
 #: src/states_screens/dialogs/addons_loading.cpp:294
+#: src/states_screens/dialogs/download_assets.cpp:182
 msgid "Sorry, downloading the add-on failed"
 msgstr "Omlouváme se, ale stahování doplňku se nezdařilo"
 
@@ -4196,6 +4200,7 @@ msgstr "Problémy s instalací doplňku „%s“."
 
 #: src/states_screens/dialogs/addons_loading.cpp:389
 #: src/states_screens/dialogs/addons_loading.cpp:428
+#: src/states_screens/dialogs/download_assets.cpp:255
 msgid "Try again"
 msgstr "Zkuste znovu"
 
@@ -4288,6 +4293,22 @@ msgstr "Vysoká"
 #: src/states_screens/options/options_screen_video.cpp:468
 msgid "Very Low"
 msgstr "Velmi nízká"
+
+#. I18N: In download assets dialog
+#: src/states_screens/dialogs/download_assets.cpp:112
+msgid ""
+"SuperTuxKart will download full assets (including all tracks, high quality "
+"textures and music) for better gaming experience, this will use your mobile "
+"data if you don't have a wifi connection."
+msgstr ""
+
+#. I18N: Shown when there is download error for assets download
+#. in the first run
+#: src/states_screens/dialogs/download_assets.cpp:239
+msgid ""
+"Failed to download assets, check your storage space or internet connection "
+"and try again later."
+msgstr ""
 
 #: src/states_screens/dialogs/ghost_replay_info_dialog.cpp:145
 #: src/states_screens/ghost_replay_selection.cpp:155
@@ -4462,7 +4483,7 @@ msgstr "Kol: %i"
 #: src/states_screens/dialogs/select_challenge.cpp:82
 #, c-format
 msgid "Type: %s"
-msgstr ""
+msgstr "Typ: %s"
 
 #. I18N: In the Select challenge dialog
 #: src/states_screens/dialogs/select_challenge.cpp:90
@@ -4605,14 +4626,6 @@ msgstr "Hlasování bylo úspěšné! Nyní můžete zavřít okno."
 #: src/states_screens/dialogs/vote_dialog.cpp:249
 msgid "Performing vote"
 msgstr "Provádění hlasování"
-
-#. I18N: Shown when there is download error for assets download
-#. in the first run
-#: src/states_screens/download_assets.cpp:204
-msgid ""
-"Failed to download assets, check your storage space or internet connection "
-"and try again later."
-msgstr ""
 
 #: src/states_screens/easter_egg_screen.cpp:270
 #: src/states_screens/online/tracks_screen.cpp:601
@@ -4785,30 +4798,30 @@ msgid ""
 "Press the 'Select' button to join the game"
 msgstr "Všem:\nDo hry se zapojíte stiskem tlačítka „Vybrat“"
 
-#: src/states_screens/main_menu_screen.cpp:501
+#: src/states_screens/main_menu_screen.cpp:512
 msgid ""
 "You can not play online without internet access. If you want to play online,"
 " go in the options menu, and check \"Connect to the Internet\"."
 msgstr "Nemůžete hrát on-line bez přístupu k internetu. Pokud chcete hrát on-line, přejděte do nabídky Možnosti a zaškrtněte „Připojit k Internetu“."
 
-#: src/states_screens/main_menu_screen.cpp:516
+#: src/states_screens/main_menu_screen.cpp:527
 msgid ""
 "You can not download addons without internet access. If you want to download"
 " addons, go in the options menu, and check \"Connect to the Internet\"."
 msgstr "Zásuvné moduly nelze stahovat bez přístupu k internetu. Pokud chcete stahovat zásuvné moduly, přejděte do nabídky Možností a zaškrtněte \"Připojit k Internetu\"."
 
-#: src/states_screens/main_menu_screen.cpp:524
+#: src/states_screens/main_menu_screen.cpp:535
 msgid ""
 "You can not download addons without internet access. If you want to download addons, go in the options menu, and check \"Connect to the Internet\".\n"
 "\n"
 "You can however delete already downloaded addons."
 msgstr "Zásuvné moduly nelze stahovat bez přístupu k internetu. Pokud chcete stahovat zásuvné moduly, přejděte do nabídky Možností a zaškrtněte \"Připojit k Internetu\".\nMůžete však odstranit již stažené zásuvné moduly."
 
-#: src/states_screens/main_menu_screen.cpp:559
+#: src/states_screens/main_menu_screen.cpp:570
 msgid "The add-ons module is currently disabled in the Options screen"
 msgstr "Modul „Doplňky“ je momentálně vypnutý v nabídce „Předvolby“"
 
-#: src/states_screens/main_menu_screen.cpp:571
+#: src/states_screens/main_menu_screen.cpp:582
 msgid "Please wait while the add-ons are loading"
 msgstr "Chvíli strpení, načítají se doplňky"
 
@@ -5259,11 +5272,26 @@ msgstr "Opravdu chcete trvale smazat toto nastavení?"
 
 #. I18N: Tooltip in the UI menu. Use enough linebreaks to make sure the text
 #. fits the screen in low resolutions.
-#: src/states_screens/options/options_screen_general.cpp:110
+#: src/states_screens/options/options_screen_general.cpp:113
 msgid ""
 "In multiplayer mode, players can select handicapped\n"
 "(more difficult) profiles on the kart selection screen"
 msgstr "V režimu hry více hráčů si mohou hráči vybrat handicapované\n(obtížnější) profily na obrazovce s výběrem motokáry"
+
+#. I18N: For mobile version for STK, uninstall the downloaded assets
+#: src/states_screens/options/options_screen_general.cpp:123
+msgid "Uninstall full game assets"
+msgstr ""
+
+#. I18N: For mobile version for STK, install the full game assets which
+#. will download from stk server
+#: src/states_screens/options/options_screen_general.cpp:129
+msgid "Install full game assets"
+msgstr ""
+
+#: src/states_screens/options/options_screen_general.cpp:256
+msgid "Are you sure to uninstall full game assets?"
+msgstr ""
 
 #: src/states_screens/options/options_screen_input.cpp:104
 msgid "Gamepad"
@@ -5301,27 +5329,27 @@ msgstr "Skryté"
 #. I18N: In the UI options, Very small font size
 #: src/states_screens/options/options_screen_ui.cpp:142
 msgid "Very small"
-msgstr ""
+msgstr "Velmi malé"
 
 #. I18N: In the UI options, Small font size
 #: src/states_screens/options/options_screen_ui.cpp:144
 msgid "Small"
-msgstr ""
+msgstr "Malé"
 
 #. I18N: In the UI options, Medium font size
 #: src/states_screens/options/options_screen_ui.cpp:146
 msgid "Medium"
-msgstr ""
+msgstr "Střední"
 
 #. I18N: In the UI options, Large font size
 #: src/states_screens/options/options_screen_ui.cpp:148
 msgid "Large"
-msgstr ""
+msgstr "Velké"
 
 #. I18N: In the UI options, Very large font size
 #: src/states_screens/options/options_screen_ui.cpp:150
 msgid "Very large"
-msgstr ""
+msgstr "Velmi velké"
 
 #. I18N: custom video settings
 #: src/states_screens/options/options_screen_video.cpp:441
