--- a/data/po/da.po
+++ b/data/po/da.po
@@ -11,9 +11,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: SuperTuxKart\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-07-24 15:48+0800\n"
-"PO-Revision-Date: 2019-07-24 16:41+0000\n"
-"Last-Translator: Benau\n"
+"POT-Creation-Date: 2019-08-08 16:41+0800\n"
+"PO-Revision-Date: 2019-08-12 07:32+0000\n"
+"Last-Translator: scootergrisen\n"
 "Language-Team: Danish (http://www.transifex.com/supertuxkart/supertuxkart/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -976,24 +976,24 @@ msgstr "Donér for at hjælpe med at holde SuperTuxKart i gang!"
 #. I18N: ./data/gui/screens/download_assets.stkgui
 #. I18N: In the download assets screen
 msgid "Download game assets"
-msgstr ""
+msgstr "Download spilmaterialer"
 
 #. I18N: ./data/gui/screens/download_assets.stkgui
 #. I18N: In the download assets screen
 msgid ""
 "SuperTuxKart needs to download assets required to play the game now, this "
 "will use your mobile data if you don't have a wifi connection."
-msgstr ""
+msgstr "SuperTuxKart skal downloade materialer som kræves til at spille spillet nu. Din mobildata vil blive brugt hvis ikke du har en wifi-forbindelse."
 
 #. I18N: ./data/gui/screens/download_assets.stkgui
 #. I18N: In the download assets screen, download options of assets
 msgid "Include all tracks"
-msgstr ""
+msgstr "Medtag alle baner"
 
 #. I18N: ./data/gui/screens/download_assets.stkgui
 #. I18N: In the download assets screen, download options of assets
 msgid "Use high quality textures and music"
-msgstr ""
+msgstr "Brug højkvalitetsstrukturer og musik"
 
 #. I18N: ./data/gui/screens/easter_egg.stkgui
 #. I18N: Section in easter egg tracks selection screen
@@ -2509,7 +2509,7 @@ msgstr "Din konfigurationsfil var for gammel, så den blev slettet og en ny opre
 
 #: src/graphics/irr_driver.cpp:594
 msgid "Video recording started."
-msgstr "Videooptagelse startet."
+msgstr "Startede videooptagelse."
 
 #: src/graphics/irr_driver.cpp:600
 #, c-format
@@ -3252,7 +3252,7 @@ msgstr "Du fuldførte løbet!"
 msgid "%s left the game."
 msgstr "%s forlod spillet."
 
-#: src/main.cpp:1866
+#: src/main.cpp:1840
 msgid ""
 "SuperTuxKart may connect to a server to download add-ons and notify you of "
 "updates. We also collect anonymous hardware statistics to help with the "
@@ -3263,16 +3263,16 @@ msgid ""
 "statistics\")."
 msgstr "SuperTuxKart kan oprette forbindelse til en server for at downloade udvidelser og give dig besked om opdateringer. Vi indsamler også anonym hardwarestatistik for at hjælpe udviklingen af STK. Læs venligst vores privatlivspolitik på http://privacy.supertuxkart.net. Vil du aktivere funktionen? (du kan ændre indstillingen senere i indstillinger, i fanebladet \"Generelt\" ved at ændre \"Opret forbindelse til internettet\" og \"Send anonym hardwarestatistik\")."
 
-#: src/main.cpp:2134
+#: src/main.cpp:2108
 msgid "Your screen resolution is too low to run STK."
 msgstr "Din skærmopløsning er for lav til at kunne køre STK."
 
-#: src/main.cpp:2166
+#: src/main.cpp:2140
 msgid ""
 "Your driver version is too old. Please install the latest video drivers."
 msgstr "Din driverversion er for gammel. Installer venligst de seneste videodrivere."
 
-#: src/main.cpp:2184
+#: src/main.cpp:2158
 #, c-format
 msgid ""
 "Your graphics driver appears to be very old. Please check if an update is "
@@ -3699,7 +3699,7 @@ msgid "Please wait while addons are updated"
 msgstr "Vent venligst mens udvidelserne opdateres"
 
 #: src/states_screens/addons_screen.cpp:498
-#: src/states_screens/main_menu_screen.cpp:564
+#: src/states_screens/main_menu_screen.cpp:575
 msgid ""
 "Sorry, an error occurred while contacting the add-ons website. Make sure you"
 " are connected to the Internet and that SuperTuxKart is not blocked by a "
@@ -3898,13 +3898,13 @@ msgstr "Fuldførte følg lederen-løb"
 #. added to multiple different goals.
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:210
 msgid "3 Strikes battles started"
-msgstr ""
+msgstr "Startede 3-slags-kampe"
 
 #. I18N: A goal for achievements. If this text is in (), it's a precision
 #. added to multiple different goals.
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:212
 msgid "3 Strikes battles finished"
-msgstr ""
+msgstr "Fuldførte 3-slags-kampe"
 
 #. I18N: A goal for achievements. If this text is in (), it's a precision
 #. added to multiple different goals.
@@ -3934,13 +3934,13 @@ msgstr "Fuldførte æggejagt"
 #. added to multiple different goals.
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:222
 msgid "Races started with a ghost replay"
-msgstr "Løb startede med en spøgelsesgengivelse"
+msgstr "Startede løb med en spøgelsesgengivelse"
 
 #. I18N: A goal for achievements. If this text is in (), it's a precision
 #. added to multiple different goals.
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:224
 msgid "Races finished with a ghost replay"
-msgstr "Løb fuldført med en spøgelsesgengivelse"
+msgstr "Fuldførte løb med en spøgelsesgengivelse"
 
 #. I18N: A goal for achievements. If this text is in (), it's a precision
 #. added to multiple different goals.
@@ -4069,14 +4069,14 @@ msgstr "Fuldførte løb"
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:278
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:303
 msgid "Reverse direction races finished"
-msgstr "Løb fuldført den anden vej"
+msgstr "Fuldførte løb den anden vej"
 
 #. I18N: A goal for achievements. If this text is in (), it's a precision
 #. added to multiple different goals.
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:280
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:305
 msgid "Races finished alone"
-msgstr "Løb som er fuldført alene"
+msgstr "Fuldførte løb alene"
 
 #. I18N: A goal for achievements. If this text is in (), it's a precision
 #. added to multiple different goals.
@@ -4159,6 +4159,7 @@ msgid "featured"
 msgstr "fremhævet"
 
 #: src/states_screens/dialogs/addons_loading.cpp:174
+#: src/states_screens/dialogs/download_assets.cpp:106
 #, c-format
 msgid "%s MB"
 msgstr "%s MB"
@@ -4169,12 +4170,15 @@ msgstr "%s MB"
 msgid "%s KB"
 msgstr "%s KB"
 
+#. I18N: File size of game assets or addons downloading
 #: src/states_screens/dialogs/addons_loading.cpp:186
+#: src/states_screens/dialogs/download_assets.cpp:108
 #, c-format
 msgid "Size: %s"
 msgstr "Størrelse: %s"
 
 #: src/states_screens/dialogs/addons_loading.cpp:294
+#: src/states_screens/dialogs/download_assets.cpp:182
 msgid "Sorry, downloading the add-on failed"
 msgstr "Beklager, download af udvidelsen mislykkedes"
 
@@ -4185,6 +4189,7 @@ msgstr "Problemer under installationen af udvidelsen \"%s\"."
 
 #: src/states_screens/dialogs/addons_loading.cpp:389
 #: src/states_screens/dialogs/addons_loading.cpp:428
+#: src/states_screens/dialogs/download_assets.cpp:255
 msgid "Try again"
 msgstr "Prøv igen"
 
@@ -4275,6 +4280,22 @@ msgstr "Høj"
 #: src/states_screens/options/options_screen_video.cpp:468
 msgid "Very Low"
 msgstr "Meget lav"
+
+#. I18N: In download assets dialog
+#: src/states_screens/dialogs/download_assets.cpp:112
+msgid ""
+"SuperTuxKart will download full assets (including all tracks, high quality "
+"textures and music) for better gaming experience, this will use your mobile "
+"data if you don't have a wifi connection."
+msgstr "SuperTuxKart downloader alle materialer (inklusive alle baner, højkvalitetsteksturer og musik) for at få en bedre spiloplevelse. Har du ikke en wifi-forbindelse, så bruges din mobildata."
+
+#. I18N: Shown when there is download error for assets download
+#. in the first run
+#: src/states_screens/dialogs/download_assets.cpp:239
+msgid ""
+"Failed to download assets, check your storage space or internet connection "
+"and try again later."
+msgstr "Kunne ikke downloade materialer. Tjek din lagerplads og internetforbindelse. og prøv igen senere."
 
 #: src/states_screens/dialogs/ghost_replay_info_dialog.cpp:145
 #: src/states_screens/ghost_replay_selection.cpp:155
@@ -4593,14 +4614,6 @@ msgstr "Afstemningen lykkedes! Du kan nu lukke vinduet."
 msgid "Performing vote"
 msgstr "Udfører stemme"
 
-#. I18N: Shown when there is download error for assets download
-#. in the first run
-#: src/states_screens/download_assets.cpp:204
-msgid ""
-"Failed to download assets, check your storage space or internet connection "
-"and try again later."
-msgstr ""
-
 #: src/states_screens/easter_egg_screen.cpp:270
 #: src/states_screens/online/tracks_screen.cpp:601
 #: src/states_screens/tracks_and_gp_screen.cpp:290
@@ -4772,30 +4785,30 @@ msgid ""
 "Press the 'Select' button to join the game"
 msgstr "Alle:\nTryk på 'Vælg'-knappen for at deltage i spillet"
 
-#: src/states_screens/main_menu_screen.cpp:501
+#: src/states_screens/main_menu_screen.cpp:512
 msgid ""
 "You can not play online without internet access. If you want to play online,"
 " go in the options menu, and check \"Connect to the Internet\"."
 msgstr "Du kan ikke spille online uden internetadgang. Hvis du vil spille online, så gå ind i indstillingsmenuen og tilvælg \"Opret forbindelse til internettet\"."
 
-#: src/states_screens/main_menu_screen.cpp:516
+#: src/states_screens/main_menu_screen.cpp:527
 msgid ""
 "You can not download addons without internet access. If you want to download"
 " addons, go in the options menu, and check \"Connect to the Internet\"."
 msgstr "Du kan ikke downloade udvidelser uden internetadgang. Hvis du vil downloade udvidelser, så gå ind i indstillingsmenuen og tilvælg \"Opret forbindelse til internettet\"."
 
-#: src/states_screens/main_menu_screen.cpp:524
+#: src/states_screens/main_menu_screen.cpp:535
 msgid ""
 "You can not download addons without internet access. If you want to download addons, go in the options menu, and check \"Connect to the Internet\".\n"
 "\n"
 "You can however delete already downloaded addons."
 msgstr "Du kan ikke downloade udvidelser uden internetadgang. Hvis du vil downloade udvidelser, så gå ind i indstillingsmenuen og tilvælg \"Opret forbindelse til internettet\".\n\nDu kan dog slette udvidelser som allerede er downloadet."
 
-#: src/states_screens/main_menu_screen.cpp:559
+#: src/states_screens/main_menu_screen.cpp:570
 msgid "The add-ons module is currently disabled in the Options screen"
 msgstr "Udvidelsesmodulet er slået fra på skærmen Indstillinger"
 
-#: src/states_screens/main_menu_screen.cpp:571
+#: src/states_screens/main_menu_screen.cpp:582
 msgid "Please wait while the add-ons are loading"
 msgstr "Vent venligst mens udvidelserne indlæses"
 
@@ -5242,11 +5255,26 @@ msgstr "Er du sikker på, at du vil slette konfigurationen permanent?"
 
 #. I18N: Tooltip in the UI menu. Use enough linebreaks to make sure the text
 #. fits the screen in low resolutions.
-#: src/states_screens/options/options_screen_general.cpp:110
+#: src/states_screens/options/options_screen_general.cpp:113
 msgid ""
 "In multiplayer mode, players can select handicapped\n"
 "(more difficult) profiles on the kart selection screen"
 msgstr "I flere spillere-tilstand kan spillere vælge profiler med handikap (sværere) på skærmen hvor der vælges kart"
+
+#. I18N: For mobile version for STK, uninstall the downloaded assets
+#: src/states_screens/options/options_screen_general.cpp:123
+msgid "Uninstall full game assets"
+msgstr "Afinstaller alle spilmaterialer"
+
+#. I18N: For mobile version for STK, install the full game assets which
+#. will download from stk server
+#: src/states_screens/options/options_screen_general.cpp:129
+msgid "Install full game assets"
+msgstr "Installer alle spilmaterialer"
+
+#: src/states_screens/options/options_screen_general.cpp:256
+msgid "Are you sure to uninstall full game assets?"
+msgstr "Er du sikker på, at du vil afinstallere alle spilmaterialer?"
 
 #: src/states_screens/options/options_screen_input.cpp:104
 msgid "Gamepad"
