--- a/data/po/en.po
+++ b/data/po/en.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: SuperTuxKart\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-07-24 15:48+0800\n"
-"PO-Revision-Date: 2019-07-24 16:41+0000\n"
+"POT-Creation-Date: 2019-08-08 16:41+0800\n"
+"PO-Revision-Date: 2019-08-12 07:32+0000\n"
 "Last-Translator: Benau\n"
 "Language-Team: English (http://www.transifex.com/supertuxkart/supertuxkart/language/en/)\n"
 "MIME-Version: 1.0\n"
@@ -3248,7 +3248,7 @@ msgstr "You finished the race!"
 msgid "%s left the game."
 msgstr "%s left the game."
 
-#: src/main.cpp:1866
+#: src/main.cpp:1840
 msgid ""
 "SuperTuxKart may connect to a server to download add-ons and notify you of "
 "updates. We also collect anonymous hardware statistics to help with the "
@@ -3259,16 +3259,16 @@ msgid ""
 "statistics\")."
 msgstr "SuperTuxKart may connect to a server to download add-ons and notify you of updates. We also collect anonymous hardware statistics to help with the development of STK. Please read our privacy policy at http://privacy.supertuxkart.net. Would you like this feature to be enabled? (To change this setting at a later time, go to options, select tab 'General', and edit \"Connect to the Internet\" and \"Send anonymous HW statistics\")."
 
-#: src/main.cpp:2134
+#: src/main.cpp:2108
 msgid "Your screen resolution is too low to run STK."
 msgstr "Your screen resolution is too low to run STK."
 
-#: src/main.cpp:2166
+#: src/main.cpp:2140
 msgid ""
 "Your driver version is too old. Please install the latest video drivers."
 msgstr "Your driver version is too old. Please install the latest video drivers."
 
-#: src/main.cpp:2184
+#: src/main.cpp:2158
 #, c-format
 msgid ""
 "Your graphics driver appears to be very old. Please check if an update is "
@@ -3695,7 +3695,7 @@ msgid "Please wait while addons are updated"
 msgstr "Please wait while addons are updated"
 
 #: src/states_screens/addons_screen.cpp:498
-#: src/states_screens/main_menu_screen.cpp:564
+#: src/states_screens/main_menu_screen.cpp:575
 msgid ""
 "Sorry, an error occurred while contacting the add-ons website. Make sure you"
 " are connected to the Internet and that SuperTuxKart is not blocked by a "
@@ -4155,6 +4155,7 @@ msgid "featured"
 msgstr "featured"
 
 #: src/states_screens/dialogs/addons_loading.cpp:174
+#: src/states_screens/dialogs/download_assets.cpp:106
 #, c-format
 msgid "%s MB"
 msgstr "%s MB"
@@ -4165,12 +4166,15 @@ msgstr "%s MB"
 msgid "%s KB"
 msgstr "%s KB"
 
+#. I18N: File size of game assets or addons downloading
 #: src/states_screens/dialogs/addons_loading.cpp:186
+#: src/states_screens/dialogs/download_assets.cpp:108
 #, c-format
 msgid "Size: %s"
 msgstr "Size: %s"
 
 #: src/states_screens/dialogs/addons_loading.cpp:294
+#: src/states_screens/dialogs/download_assets.cpp:182
 msgid "Sorry, downloading the add-on failed"
 msgstr "Sorry, downloading the add-on failed"
 
@@ -4181,6 +4185,7 @@ msgstr "Problems installing the addon '%s'."
 
 #: src/states_screens/dialogs/addons_loading.cpp:389
 #: src/states_screens/dialogs/addons_loading.cpp:428
+#: src/states_screens/dialogs/download_assets.cpp:255
 msgid "Try again"
 msgstr "Try again"
 
@@ -4271,6 +4276,22 @@ msgstr "High"
 #: src/states_screens/options/options_screen_video.cpp:468
 msgid "Very Low"
 msgstr "Very Low"
+
+#. I18N: In download assets dialog
+#: src/states_screens/dialogs/download_assets.cpp:112
+msgid ""
+"SuperTuxKart will download full assets (including all tracks, high quality "
+"textures and music) for better gaming experience, this will use your mobile "
+"data if you don't have a wifi connection."
+msgstr "SuperTuxKart will download full assets (including all tracks, high quality textures and music) for better gaming experience, this will use your mobile data if you don't have a wifi connection."
+
+#. I18N: Shown when there is download error for assets download
+#. in the first run
+#: src/states_screens/dialogs/download_assets.cpp:239
+msgid ""
+"Failed to download assets, check your storage space or internet connection "
+"and try again later."
+msgstr "Failed to download assets, check your storage space or internet connection and try again later."
 
 #: src/states_screens/dialogs/ghost_replay_info_dialog.cpp:145
 #: src/states_screens/ghost_replay_selection.cpp:155
@@ -4589,14 +4610,6 @@ msgstr "Vote successful! You can now close the window."
 msgid "Performing vote"
 msgstr "Performing vote"
 
-#. I18N: Shown when there is download error for assets download
-#. in the first run
-#: src/states_screens/download_assets.cpp:204
-msgid ""
-"Failed to download assets, check your storage space or internet connection "
-"and try again later."
-msgstr "Failed to download assets, check your storage space or internet connection and try again later."
-
 #: src/states_screens/easter_egg_screen.cpp:270
 #: src/states_screens/online/tracks_screen.cpp:601
 #: src/states_screens/tracks_and_gp_screen.cpp:290
@@ -4768,30 +4781,30 @@ msgid ""
 "Press the 'Select' button to join the game"
 msgstr "Everyone:\nPress the 'Select' button to join the game"
 
-#: src/states_screens/main_menu_screen.cpp:501
+#: src/states_screens/main_menu_screen.cpp:512
 msgid ""
 "You can not play online without internet access. If you want to play online,"
 " go in the options menu, and check \"Connect to the Internet\"."
 msgstr "You can not play online without internet access. If you want to play online, go in the options menu, and check \"Connect to the Internet\"."
 
-#: src/states_screens/main_menu_screen.cpp:516
+#: src/states_screens/main_menu_screen.cpp:527
 msgid ""
 "You can not download addons without internet access. If you want to download"
 " addons, go in the options menu, and check \"Connect to the Internet\"."
 msgstr "You can not download addons without internet access. If you want to download addons, go in the options menu, and check \"Connect to the Internet\"."
 
-#: src/states_screens/main_menu_screen.cpp:524
+#: src/states_screens/main_menu_screen.cpp:535
 msgid ""
 "You can not download addons without internet access. If you want to download addons, go in the options menu, and check \"Connect to the Internet\".\n"
 "\n"
 "You can however delete already downloaded addons."
 msgstr "You can not download addons without internet access. If you want to download addons, go in the options menu, and check \"Connect to the Internet\".\n\nYou can however delete already downloaded addons."
 
-#: src/states_screens/main_menu_screen.cpp:559
+#: src/states_screens/main_menu_screen.cpp:570
 msgid "The add-ons module is currently disabled in the Options screen"
 msgstr "The add-ons module is currently disabled in the Options screen"
 
-#: src/states_screens/main_menu_screen.cpp:571
+#: src/states_screens/main_menu_screen.cpp:582
 msgid "Please wait while the add-ons are loading"
 msgstr "Please wait while the add-ons are loading"
 
@@ -5238,11 +5251,26 @@ msgstr "Are you sure you want to permanently delete this configuration?"
 
 #. I18N: Tooltip in the UI menu. Use enough linebreaks to make sure the text
 #. fits the screen in low resolutions.
-#: src/states_screens/options/options_screen_general.cpp:110
+#: src/states_screens/options/options_screen_general.cpp:113
 msgid ""
 "In multiplayer mode, players can select handicapped\n"
 "(more difficult) profiles on the kart selection screen"
 msgstr "In multiplayer mode, players can select handicapped\n(more difficult) profiles on the kart selection screen"
+
+#. I18N: For mobile version for STK, uninstall the downloaded assets
+#: src/states_screens/options/options_screen_general.cpp:123
+msgid "Uninstall full game assets"
+msgstr "Uninstall full game assets"
+
+#. I18N: For mobile version for STK, install the full game assets which
+#. will download from stk server
+#: src/states_screens/options/options_screen_general.cpp:129
+msgid "Install full game assets"
+msgstr "Install full game assets"
+
+#: src/states_screens/options/options_screen_general.cpp:256
+msgid "Are you sure to uninstall full game assets?"
+msgstr "Are you sure to uninstall full game assets?"
 
 #: src/states_screens/options/options_screen_input.cpp:104
 msgid "Gamepad"
