--- a/data/po/es.po
+++ b/data/po/es.po
@@ -12,9 +12,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: SuperTuxKart\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-07-24 15:48+0800\n"
-"PO-Revision-Date: 2019-07-24 16:41+0000\n"
-"Last-Translator: Benau\n"
+"POT-Creation-Date: 2019-08-08 16:41+0800\n"
+"PO-Revision-Date: 2019-08-12 07:32+0000\n"
+"Last-Translator: Marc Coll Carrillo <marc.coll.carrillo@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/supertuxkart/supertuxkart/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -977,24 +977,24 @@ msgstr "¡Dona para ayudar a mantener SuperTuxKart!"
 #. I18N: ./data/gui/screens/download_assets.stkgui
 #. I18N: In the download assets screen
 msgid "Download game assets"
-msgstr ""
+msgstr "Descargar recursos del juego"
 
 #. I18N: ./data/gui/screens/download_assets.stkgui
 #. I18N: In the download assets screen
 msgid ""
 "SuperTuxKart needs to download assets required to play the game now, this "
 "will use your mobile data if you don't have a wifi connection."
-msgstr ""
+msgstr "SuperTuxKart necesita descargar recursos requeridos para jugar al juego, esto usará tus datos móviles si no tienes una conexión wi fi."
 
 #. I18N: ./data/gui/screens/download_assets.stkgui
 #. I18N: In the download assets screen, download options of assets
 msgid "Include all tracks"
-msgstr ""
+msgstr "Incluir todos los circuitos"
 
 #. I18N: ./data/gui/screens/download_assets.stkgui
 #. I18N: In the download assets screen, download options of assets
 msgid "Use high quality textures and music"
-msgstr ""
+msgstr "Usar texturas de alta calidad y música"
 
 #. I18N: ./data/gui/screens/easter_egg.stkgui
 #. I18N: Section in easter egg tracks selection screen
@@ -1493,7 +1493,7 @@ msgid ""
 "Mass - there are three classes of karts, depending on their mass: light, "
 "medium and heavy. Heavier karts are less affected by parachutes and are more"
 " resistant to explosions."
-msgstr ""
+msgstr "Masa - hay tres clases de kart, dependiendo de su masa: ligero, medio y pesado. A los karts más pesados no les afectan tanto los paracaídas, y son más resistentes a las explosiones."
 
 #. I18N: ./data/gui/screens/help6.stkgui
 #. I18N: In the help menu
@@ -2373,7 +2373,7 @@ msgstr "Arenas movedizas"
 
 #. I18N: ../stk-assets/tracks/scotland/track.xml
 msgid "Nessie's Pond"
-msgstr ""
+msgstr "El estanque de Nessie"
 
 #. I18N: ../stk-assets/tracks/snowmountain/track.xml
 msgid "Northern Resort"
@@ -3253,7 +3253,7 @@ msgstr "¡Has finalizado la carrera!"
 msgid "%s left the game."
 msgstr "%s ha abandonado la partida."
 
-#: src/main.cpp:1866
+#: src/main.cpp:1840
 msgid ""
 "SuperTuxKart may connect to a server to download add-ons and notify you of "
 "updates. We also collect anonymous hardware statistics to help with the "
@@ -3264,16 +3264,16 @@ msgid ""
 "statistics\")."
 msgstr "SuperTuxKart puede conectarse a un servidor para descargar complementos y notificarte actualizaciones. También recogemos estadísticas anónimas de hardware para ayudar en el desarrollo de STK. Lee nuestra declaración de privacidad en http://privacy.supertuxkart.net. ¿Te gustaría habilitar esta característica? (Para cambiar este parámetro más adelante, ve a las opciones, selecciona la pestaña \"Interfaz de usuario\", y edita los parámetros \"General\" y \"Enviar estadísticas de hardware anónimas\")."
 
-#: src/main.cpp:2134
+#: src/main.cpp:2108
 msgid "Your screen resolution is too low to run STK."
 msgstr "La resolución de tu pantalla es demasiado baja para ejecutar STK."
 
-#: src/main.cpp:2166
+#: src/main.cpp:2140
 msgid ""
 "Your driver version is too old. Please install the latest video drivers."
 msgstr "La versión de tu controlador gráfico es demasiado antigua. Por favor, instala la última versión."
 
-#: src/main.cpp:2184
+#: src/main.cpp:2158
 #, c-format
 msgid ""
 "Your graphics driver appears to be very old. Please check if an update is "
@@ -3700,7 +3700,7 @@ msgid "Please wait while addons are updated"
 msgstr "Espera mientras se cargan los complementos"
 
 #: src/states_screens/addons_screen.cpp:498
-#: src/states_screens/main_menu_screen.cpp:564
+#: src/states_screens/main_menu_screen.cpp:575
 msgid ""
 "Sorry, an error occurred while contacting the add-ons website. Make sure you"
 " are connected to the Internet and that SuperTuxKart is not blocked by a "
@@ -3899,13 +3899,13 @@ msgstr "Carreras sigue al líder acabadas"
 #. added to multiple different goals.
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:210
 msgid "3 Strikes battles started"
-msgstr ""
+msgstr "Batallas a 3 golpes empezadas"
 
 #. I18N: A goal for achievements. If this text is in (), it's a precision
 #. added to multiple different goals.
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:212
 msgid "3 Strikes battles finished"
-msgstr ""
+msgstr "Batallas a 3 golpes acabadas"
 
 #. I18N: A goal for achievements. If this text is in (), it's a precision
 #. added to multiple different goals.
@@ -4160,6 +4160,7 @@ msgid "featured"
 msgstr "Destacados"
 
 #: src/states_screens/dialogs/addons_loading.cpp:174
+#: src/states_screens/dialogs/download_assets.cpp:106
 #, c-format
 msgid "%s MB"
 msgstr "%s MB"
@@ -4170,12 +4171,15 @@ msgstr "%s MB"
 msgid "%s KB"
 msgstr "%s KB"
 
+#. I18N: File size of game assets or addons downloading
 #: src/states_screens/dialogs/addons_loading.cpp:186
+#: src/states_screens/dialogs/download_assets.cpp:108
 #, c-format
 msgid "Size: %s"
 msgstr "Tamaño: %s"
 
 #: src/states_screens/dialogs/addons_loading.cpp:294
+#: src/states_screens/dialogs/download_assets.cpp:182
 msgid "Sorry, downloading the add-on failed"
 msgstr "No se ha podido descargar el complemento"
 
@@ -4186,6 +4190,7 @@ msgstr "Problemas instalando el complemento '%s'."
 
 #: src/states_screens/dialogs/addons_loading.cpp:389
 #: src/states_screens/dialogs/addons_loading.cpp:428
+#: src/states_screens/dialogs/download_assets.cpp:255
 msgid "Try again"
 msgstr "Inténtalo de nuevo"
 
@@ -4276,6 +4281,22 @@ msgstr "Alto"
 #: src/states_screens/options/options_screen_video.cpp:468
 msgid "Very Low"
 msgstr "Muy bajo"
+
+#. I18N: In download assets dialog
+#: src/states_screens/dialogs/download_assets.cpp:112
+msgid ""
+"SuperTuxKart will download full assets (including all tracks, high quality "
+"textures and music) for better gaming experience, this will use your mobile "
+"data if you don't have a wifi connection."
+msgstr "SuperTuxKart descargará los recursos completos (incluídos todos los circuitos, texturas de alta calidad y música) para una mejor experiencia de juego. Esto usará tus datos móviles si no tienes una conexión wi fi."
+
+#. I18N: Shown when there is download error for assets download
+#. in the first run
+#: src/states_screens/dialogs/download_assets.cpp:239
+msgid ""
+"Failed to download assets, check your storage space or internet connection "
+"and try again later."
+msgstr "No se han podido descargar los recursos. Comprueba tu espacio de almacenamiento o tu conexión a Internet, y vuelve a intentarlo."
 
 #: src/states_screens/dialogs/ghost_replay_info_dialog.cpp:145
 #: src/states_screens/ghost_replay_selection.cpp:155
@@ -4594,14 +4615,6 @@ msgstr "¡El voto se ha enviado correctamente! Ya puedes cerrar la ventana."
 msgid "Performing vote"
 msgstr "Realizando voto"
 
-#. I18N: Shown when there is download error for assets download
-#. in the first run
-#: src/states_screens/download_assets.cpp:204
-msgid ""
-"Failed to download assets, check your storage space or internet connection "
-"and try again later."
-msgstr ""
-
 #: src/states_screens/easter_egg_screen.cpp:270
 #: src/states_screens/online/tracks_screen.cpp:601
 #: src/states_screens/tracks_and_gp_screen.cpp:290
@@ -4773,30 +4786,30 @@ msgid ""
 "Press the 'Select' button to join the game"
 msgstr "Todo el mundo:\n¡Pulsad el botón 'Seleccionar' para uniros a la partida!"
 
-#: src/states_screens/main_menu_screen.cpp:501
+#: src/states_screens/main_menu_screen.cpp:512
 msgid ""
 "You can not play online without internet access. If you want to play online,"
 " go in the options menu, and check \"Connect to the Internet\"."
 msgstr "No puedes jugar en línea sin acceso a Internet. Si quieres jugar en línea, ve al menú de opciones y selecciona \"Conectarse a Internet\"."
 
-#: src/states_screens/main_menu_screen.cpp:516
+#: src/states_screens/main_menu_screen.cpp:527
 msgid ""
 "You can not download addons without internet access. If you want to download"
 " addons, go in the options menu, and check \"Connect to the Internet\"."
 msgstr "No puedes descargar complementos sin acceso a Internet. Si quieres descargar complementos, ve al menú de opciones y selecciona \"Conectarse a Internet\"."
 
-#: src/states_screens/main_menu_screen.cpp:524
+#: src/states_screens/main_menu_screen.cpp:535
 msgid ""
 "You can not download addons without internet access. If you want to download addons, go in the options menu, and check \"Connect to the Internet\".\n"
 "\n"
 "You can however delete already downloaded addons."
 msgstr "No puedes descargar complementos sin acceso a Internet. Si quieres descargar complementos, ve al menú de opciones y selecciona \"Conectarse a Internet\".\n\nPero sí que puedes eliminar complementos ya descargados."
 
-#: src/states_screens/main_menu_screen.cpp:559
+#: src/states_screens/main_menu_screen.cpp:570
 msgid "The add-ons module is currently disabled in the Options screen"
 msgstr "El módulo de complementos está desactivado en la pantalla de opciones"
 
-#: src/states_screens/main_menu_screen.cpp:571
+#: src/states_screens/main_menu_screen.cpp:582
 msgid "Please wait while the add-ons are loading"
 msgstr "Espera mientras se cargan los complementos"
 
@@ -4971,7 +4984,7 @@ msgstr "No puedes jugar en línea sin acceso a Internet. Si quieres jugar en lí
 #: src/states_screens/online/online_screen.cpp:238
 msgid ""
 "Enter the server address with IP optionally followed by : and then port."
-msgstr ""
+msgstr "Introduce la dirección del servidor con la IP opcionalmente seguida de : y el puerto."
 
 #: src/states_screens/online/online_screen.cpp:249
 #, c-format
@@ -5243,11 +5256,26 @@ msgstr "¿Seguro que quieres eliminar permanentemente esta configuración?"
 
 #. I18N: Tooltip in the UI menu. Use enough linebreaks to make sure the text
 #. fits the screen in low resolutions.
-#: src/states_screens/options/options_screen_general.cpp:110
+#: src/states_screens/options/options_screen_general.cpp:113
 msgid ""
 "In multiplayer mode, players can select handicapped\n"
 "(more difficult) profiles on the kart selection screen"
 msgstr "En modo multijugador, los jugadores pueden seleccionar perfiles limitados\n(más difíciles) en la pantalla de selección de karts"
+
+#. I18N: For mobile version for STK, uninstall the downloaded assets
+#: src/states_screens/options/options_screen_general.cpp:123
+msgid "Uninstall full game assets"
+msgstr "Desinstalar los recursos completos"
+
+#. I18N: For mobile version for STK, install the full game assets which
+#. will download from stk server
+#: src/states_screens/options/options_screen_general.cpp:129
+msgid "Install full game assets"
+msgstr "Instalar los recursos completos"
+
+#: src/states_screens/options/options_screen_general.cpp:256
+msgid "Are you sure to uninstall full game assets?"
+msgstr "¿Estás seguro de que quieres desinstalar los recursos completos?"
 
 #: src/states_screens/options/options_screen_input.cpp:104
 msgid "Gamepad"
