--- a/data/po/hu.po
+++ b/data/po/hu.po
@@ -4,6 +4,7 @@
 # 
 # Translators:
 # Balázs Meskó <meskobalazs@gmail.com>, 2019
+# Balázs Úr, 2019
 # Balázs Úr, 2018-2019
 # Balázs Úr, 2016-2018
 # Bangó Máté <matepenpals@hotmail.com>, 2016
@@ -13,9 +14,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: SuperTuxKart\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-07-24 15:48+0800\n"
-"PO-Revision-Date: 2019-07-24 16:41+0000\n"
-"Last-Translator: Benau\n"
+"POT-Creation-Date: 2019-08-08 16:41+0800\n"
+"PO-Revision-Date: 2019-08-12 07:32+0000\n"
+"Last-Translator: Balázs Úr\n"
 "Language-Team: Hungarian (http://www.transifex.com/supertuxkart/supertuxkart/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -978,24 +979,24 @@ msgstr "Támogasd a SuperTuxKart folyamatos fejlesztését!"
 #. I18N: ./data/gui/screens/download_assets.stkgui
 #. I18N: In the download assets screen
 msgid "Download game assets"
-msgstr ""
+msgstr "Játékelemek letöltése"
 
 #. I18N: ./data/gui/screens/download_assets.stkgui
 #. I18N: In the download assets screen
 msgid ""
 "SuperTuxKart needs to download assets required to play the game now, this "
 "will use your mobile data if you don't have a wifi connection."
-msgstr ""
+msgstr "A SuperTuxKart programnak most le kell töltenie a játék indításához szükséges elemeket. Ez a mobil adatforgalmadat fogja használni, ha nincs Wi-Fi kapcsolatod."
 
 #. I18N: ./data/gui/screens/download_assets.stkgui
 #. I18N: In the download assets screen, download options of assets
 msgid "Include all tracks"
-msgstr ""
+msgstr "Tartalmazzon minden pályát"
 
 #. I18N: ./data/gui/screens/download_assets.stkgui
 #. I18N: In the download assets screen, download options of assets
 msgid "Use high quality textures and music"
-msgstr ""
+msgstr "Jó minőségű textúrák és zene használata"
 
 #. I18N: ./data/gui/screens/easter_egg.stkgui
 #. I18N: Section in easter egg tracks selection screen
@@ -3254,7 +3255,7 @@ msgstr "Befejezted a versenyt!"
 msgid "%s left the game."
 msgstr "%s kilépett a játékból."
 
-#: src/main.cpp:1866
+#: src/main.cpp:1840
 msgid ""
 "SuperTuxKart may connect to a server to download add-ons and notify you of "
 "updates. We also collect anonymous hardware statistics to help with the "
@@ -3265,16 +3266,16 @@ msgid ""
 "statistics\")."
 msgstr "A SuperTuxKart csatlakozhat egy kiszolgálóhoz kiegészítők letöltéséhez, és a értesít a frissítésekről. Névtelen hardverstatisztikákat is gyűjtünk az STK fejlesztésének segítségére. Olvasd el az adatvédelmi irányelveinket a http://privacy.supertuxkart.net angol nyelvű oldalon. Szeretnéd ezt a szolgáltatást engedélyezni? (Ezen beállítás későbbi megváltoztatásához menj a beállításokhoz, válaszd az „Általános” lapot, és szerkeszd a „Csatlakozás az Internethez” és a „Névtelen hardverstatisztikák küldése” beállításokat)."
 
-#: src/main.cpp:2134
+#: src/main.cpp:2108
 msgid "Your screen resolution is too low to run STK."
 msgstr "A képernyőfelbontásod túl alacsony az STK futtatásához."
 
-#: src/main.cpp:2166
+#: src/main.cpp:2140
 msgid ""
 "Your driver version is too old. Please install the latest video drivers."
 msgstr "Az illesztőprogramod verziója túl régi. Kérlek telepítsd a legfrissebb videokártya illesztőprogramokat."
 
-#: src/main.cpp:2184
+#: src/main.cpp:2158
 #, c-format
 msgid ""
 "Your graphics driver appears to be very old. Please check if an update is "
@@ -3701,7 +3702,7 @@ msgid "Please wait while addons are updated"
 msgstr "Kérlek várj, amíg a kiegészítők frissítésre kerülnek"
 
 #: src/states_screens/addons_screen.cpp:498
-#: src/states_screens/main_menu_screen.cpp:564
+#: src/states_screens/main_menu_screen.cpp:575
 msgid ""
 "Sorry, an error occurred while contacting the add-ons website. Make sure you"
 " are connected to the Internet and that SuperTuxKart is not blocked by a "
@@ -3900,13 +3901,13 @@ msgstr "Kövesd a vezért versenyek befejezve"
 #. added to multiple different goals.
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:210
 msgid "3 Strikes battles started"
-msgstr ""
+msgstr "3-csapásos csata elindítva"
 
 #. I18N: A goal for achievements. If this text is in (), it's a precision
 #. added to multiple different goals.
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:212
 msgid "3 Strikes battles finished"
-msgstr ""
+msgstr "3-csapásos csata befejezve"
 
 #. I18N: A goal for achievements. If this text is in (), it's a precision
 #. added to multiple different goals.
@@ -4161,6 +4162,7 @@ msgid "featured"
 msgstr "ajánlott"
 
 #: src/states_screens/dialogs/addons_loading.cpp:174
+#: src/states_screens/dialogs/download_assets.cpp:106
 #, c-format
 msgid "%s MB"
 msgstr "%s MB"
@@ -4171,12 +4173,15 @@ msgstr "%s MB"
 msgid "%s KB"
 msgstr "%s KB"
 
+#. I18N: File size of game assets or addons downloading
 #: src/states_screens/dialogs/addons_loading.cpp:186
+#: src/states_screens/dialogs/download_assets.cpp:108
 #, c-format
 msgid "Size: %s"
 msgstr "Méret: %s"
 
 #: src/states_screens/dialogs/addons_loading.cpp:294
+#: src/states_screens/dialogs/download_assets.cpp:182
 msgid "Sorry, downloading the add-on failed"
 msgstr "Sajnálom, a kiegészítő letöltése nem sikerült"
 
@@ -4187,6 +4192,7 @@ msgstr "Probléma lépett fel az új „%s” kiegészítő telepítésekor."
 
 #: src/states_screens/dialogs/addons_loading.cpp:389
 #: src/states_screens/dialogs/addons_loading.cpp:428
+#: src/states_screens/dialogs/download_assets.cpp:255
 msgid "Try again"
 msgstr "Próbáld újra"
 
@@ -4277,6 +4283,22 @@ msgstr "Magas"
 #: src/states_screens/options/options_screen_video.cpp:468
 msgid "Very Low"
 msgstr "Nagyon alacsony"
+
+#. I18N: In download assets dialog
+#: src/states_screens/dialogs/download_assets.cpp:112
+msgid ""
+"SuperTuxKart will download full assets (including all tracks, high quality "
+"textures and music) for better gaming experience, this will use your mobile "
+"data if you don't have a wifi connection."
+msgstr "A SuperTuxKart program le fogja tölteni a teljes adatelemet (beleértve az összes pályát, jó minőségű textúrákat és zenét) a jobb játékélményhez. Ez a mobil adatforgalmadat fogja használni, ha nincs Wi-Fi kapcsolatod."
+
+#. I18N: Shown when there is download error for assets download
+#. in the first run
+#: src/states_screens/dialogs/download_assets.cpp:239
+msgid ""
+"Failed to download assets, check your storage space or internet connection "
+"and try again later."
+msgstr "Nem sikerült letölteni az elemeket. Ellenőrizd a tárolóhelyed vagy az internetkapcsolatod, és próbáld meg később újra."
 
 #: src/states_screens/dialogs/ghost_replay_info_dialog.cpp:145
 #: src/states_screens/ghost_replay_selection.cpp:155
@@ -4595,14 +4617,6 @@ msgstr "Sikeres szavazás! Most már bezárhatod az ablakot."
 msgid "Performing vote"
 msgstr "Szavazás végrehajtása"
 
-#. I18N: Shown when there is download error for assets download
-#. in the first run
-#: src/states_screens/download_assets.cpp:204
-msgid ""
-"Failed to download assets, check your storage space or internet connection "
-"and try again later."
-msgstr ""
-
 #: src/states_screens/easter_egg_screen.cpp:270
 #: src/states_screens/online/tracks_screen.cpp:601
 #: src/states_screens/tracks_and_gp_screen.cpp:290
@@ -4774,30 +4788,30 @@ msgid ""
 "Press the 'Select' button to join the game"
 msgstr "Mindenki:\nNyomd meg a „kiválasztás\" gombot a csatlakozáshoz"
 
-#: src/states_screens/main_menu_screen.cpp:501
+#: src/states_screens/main_menu_screen.cpp:512
 msgid ""
 "You can not play online without internet access. If you want to play online,"
 " go in the options menu, and check \"Connect to the Internet\"."
 msgstr "Nem játszhatsz az interneten internet-hozzáférés nélkül. Ha az interneten szeretnél játszani, akkor menj a beállítások menübe, és jelöld be a „Kapcsolódás az internethez” négyzetet."
 
-#: src/states_screens/main_menu_screen.cpp:516
+#: src/states_screens/main_menu_screen.cpp:527
 msgid ""
 "You can not download addons without internet access. If you want to download"
 " addons, go in the options menu, and check \"Connect to the Internet\"."
 msgstr "Nem tölthetsz le kiegészítőket internet-hozzáférés nélkül. Ha kiegészítőket szeretnél letölteni, akkor menj a beállítások menübe, és jelöld be a „Kapcsolódás az internethez” négyzetet."
 
-#: src/states_screens/main_menu_screen.cpp:524
+#: src/states_screens/main_menu_screen.cpp:535
 msgid ""
 "You can not download addons without internet access. If you want to download addons, go in the options menu, and check \"Connect to the Internet\".\n"
 "\n"
 "You can however delete already downloaded addons."
 msgstr "Nem tölthetsz le kiegészítőket internet-hozzáférés nélkül. Ha kiegészítőket szeretnél letölteni, akkor menj a beállítások menübe, és jelöld be a „Kapcsolódás az internethez” négyzetet.\n\nAzonban törölheted a már letöltött kiegészítőket."
 
-#: src/states_screens/main_menu_screen.cpp:559
+#: src/states_screens/main_menu_screen.cpp:570
 msgid "The add-ons module is currently disabled in the Options screen"
 msgstr "A kiegészítők modul jelenleg le van tiltva a beállítások képernyőn"
 
-#: src/states_screens/main_menu_screen.cpp:571
+#: src/states_screens/main_menu_screen.cpp:582
 msgid "Please wait while the add-ons are loading"
 msgstr "Kérlek várj, amíg a kiegészítők betöltődnek"
 
@@ -5244,11 +5258,26 @@ msgstr "Biztosan véglegesen törölni szeretnéd ezeket a beállításokat?"
 
 #. I18N: Tooltip in the UI menu. Use enough linebreaks to make sure the text
 #. fits the screen in low resolutions.
-#: src/states_screens/options/options_screen_general.cpp:110
+#: src/states_screens/options/options_screen_general.cpp:113
 msgid ""
 "In multiplayer mode, players can select handicapped\n"
 "(more difficult) profiles on the kart selection screen"
 msgstr "Többszemélyes módban a játékosok választhatnak hátránnyal\ninduló (nehezebb) profilokat a gokartválasztó képernyőn"
+
+#. I18N: For mobile version for STK, uninstall the downloaded assets
+#: src/states_screens/options/options_screen_general.cpp:123
+msgid "Uninstall full game assets"
+msgstr "Teljes játékelemek eltávolítása"
+
+#. I18N: For mobile version for STK, install the full game assets which
+#. will download from stk server
+#: src/states_screens/options/options_screen_general.cpp:129
+msgid "Install full game assets"
+msgstr "Teljes játékelemek telepítése"
+
+#: src/states_screens/options/options_screen_general.cpp:256
+msgid "Are you sure to uninstall full game assets?"
+msgstr "Biztosan eltávolítod a teljes játékelemeket?"
 
 #: src/states_screens/options/options_screen_input.cpp:104
 msgid "Gamepad"
