--- a/data/po/nl.po
+++ b/data/po/nl.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: SuperTuxKart\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-07-24 15:48+0800\n"
-"PO-Revision-Date: 2019-07-24 16:41+0000\n"
+"POT-Creation-Date: 2019-08-08 16:41+0800\n"
+"PO-Revision-Date: 2019-08-12 07:32+0000\n"
 "Last-Translator: Heimen Stoffels <vistausss@outlook.com>\n"
 "Language-Team: Dutch (http://www.transifex.com/supertuxkart/supertuxkart/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -3254,7 +3254,7 @@ msgstr "Wedstrijd afgelopen!"
 msgid "%s left the game."
 msgstr "%s heeft de wedstrijd verlaten."
 
-#: src/main.cpp:1866
+#: src/main.cpp:1840
 msgid ""
 "SuperTuxKart may connect to a server to download add-ons and notify you of "
 "updates. We also collect anonymous hardware statistics to help with the "
@@ -3265,16 +3265,16 @@ msgid ""
 "statistics\")."
 msgstr "SuperTuxKart moet verbinding maken met het internet om add-ons te kunnen downloaden en updatemeldingen te tonen. Wij verzamelen ook geanonimiseerde gegevens over hardwareprestaties t.b.v. productverbetering. Lees onze privacyverklaring op http://privacy.supertuxkart.net. Wil je deze optie activeren? (als je dit later wilt aanpassen, ga dan naar Instellingen -> Uiterlijk en pas 'Verbinden met het internet' en 'Anonieme HW-statistieken versturen' aan)."
 
-#: src/main.cpp:2134
+#: src/main.cpp:2108
 msgid "Your screen resolution is too low to run STK."
 msgstr "Je schermresolutie is te laag om STK te kunnen spelen."
 
-#: src/main.cpp:2166
+#: src/main.cpp:2140
 msgid ""
 "Your driver version is too old. Please install the latest video drivers."
 msgstr "Je videostuurprogramma is verouderd. Installeer een recenter stuurprogramma."
 
-#: src/main.cpp:2184
+#: src/main.cpp:2158
 #, c-format
 msgid ""
 "Your graphics driver appears to be very old. Please check if an update is "
@@ -3701,7 +3701,7 @@ msgid "Please wait while addons are updated"
 msgstr "Bezig met bijwerken; even geduld..."
 
 #: src/states_screens/addons_screen.cpp:498
-#: src/states_screens/main_menu_screen.cpp:564
+#: src/states_screens/main_menu_screen.cpp:575
 msgid ""
 "Sorry, an error occurred while contacting the add-ons website. Make sure you"
 " are connected to the Internet and that SuperTuxKart is not blocked by a "
@@ -4161,6 +4161,7 @@ msgid "featured"
 msgstr "uitgelicht"
 
 #: src/states_screens/dialogs/addons_loading.cpp:174
+#: src/states_screens/dialogs/download_assets.cpp:106
 #, c-format
 msgid "%s MB"
 msgstr "%s MB"
@@ -4171,12 +4172,15 @@ msgstr "%s MB"
 msgid "%s KB"
 msgstr "%s KB"
 
+#. I18N: File size of game assets or addons downloading
 #: src/states_screens/dialogs/addons_loading.cpp:186
+#: src/states_screens/dialogs/download_assets.cpp:108
 #, c-format
 msgid "Size: %s"
 msgstr "Grootte: %s"
 
 #: src/states_screens/dialogs/addons_loading.cpp:294
+#: src/states_screens/dialogs/download_assets.cpp:182
 msgid "Sorry, downloading the add-on failed"
 msgstr "De uitbreiding kan niet worden gedownload"
 
@@ -4187,6 +4191,7 @@ msgstr "De uitbreiding '%s' kan niet worden geïnstalleerd."
 
 #: src/states_screens/dialogs/addons_loading.cpp:389
 #: src/states_screens/dialogs/addons_loading.cpp:428
+#: src/states_screens/dialogs/download_assets.cpp:255
 msgid "Try again"
 msgstr "Opnieuw proberen"
 
@@ -4277,6 +4282,22 @@ msgstr "Hoog"
 #: src/states_screens/options/options_screen_video.cpp:468
 msgid "Very Low"
 msgstr "Heel laag"
+
+#. I18N: In download assets dialog
+#: src/states_screens/dialogs/download_assets.cpp:112
+msgid ""
+"SuperTuxKart will download full assets (including all tracks, high quality "
+"textures and music) for better gaming experience, this will use your mobile "
+"data if you don't have a wifi connection."
+msgstr "SuperTuxKart moet alles downloaden (alle parcours, alle muziek, alles in hoge kwaliteit). Als je niet verbonden bent met Wi-Fi, dan wordt je mobiele internetverbinding gebruikt."
+
+#. I18N: Shown when there is download error for assets download
+#. in the first run
+#: src/states_screens/dialogs/download_assets.cpp:239
+msgid ""
+"Failed to download assets, check your storage space or internet connection "
+"and try again later."
+msgstr "Downloaden mislukt. Ga na of je over voldoende opslagruimte beschikt en verbonden bent met internet. Probeer het later opnieuw."
 
 #: src/states_screens/dialogs/ghost_replay_info_dialog.cpp:145
 #: src/states_screens/ghost_replay_selection.cpp:155
@@ -4595,14 +4616,6 @@ msgstr "Je hebt gestemd! Dit scherm kan worden afgesloten."
 msgid "Performing vote"
 msgstr "Bezig met stemmen..."
 
-#. I18N: Shown when there is download error for assets download
-#. in the first run
-#: src/states_screens/download_assets.cpp:204
-msgid ""
-"Failed to download assets, check your storage space or internet connection "
-"and try again later."
-msgstr "Downloaden mislukt. Ga na of je over voldoende opslagruimte beschikt en verbonden bent met internet. Probeer het later opnieuw."
-
 #: src/states_screens/easter_egg_screen.cpp:270
 #: src/states_screens/online/tracks_screen.cpp:601
 #: src/states_screens/tracks_and_gp_screen.cpp:290
@@ -4774,30 +4787,30 @@ msgid ""
 "Press the 'Select' button to join the game"
 msgstr "Iedereen:\nDruk nu op 'Selecteren' om mee te doen aan dit spel!"
 
-#: src/states_screens/main_menu_screen.cpp:501
+#: src/states_screens/main_menu_screen.cpp:512
 msgid ""
 "You can not play online without internet access. If you want to play online,"
 " go in the options menu, and check \"Connect to the Internet\"."
 msgstr "Zonder internettoegang kun je niet online spelen. Ga, als je online wilt spelen, naar Instellingen --> Uiterlijk en kies de optie 'Verbinden met het internet'."
 
-#: src/states_screens/main_menu_screen.cpp:516
+#: src/states_screens/main_menu_screen.cpp:527
 msgid ""
 "You can not download addons without internet access. If you want to download"
 " addons, go in the options menu, and check \"Connect to the Internet\"."
 msgstr "Zonder internettoegang kun je geen uitbreidingen downloaden. Ga, als je online wilt spelen, naar Instellingen --> Uiterlijk en kies de optie 'Verbinden met het internet'."
 
-#: src/states_screens/main_menu_screen.cpp:524
+#: src/states_screens/main_menu_screen.cpp:535
 msgid ""
 "You can not download addons without internet access. If you want to download addons, go in the options menu, and check \"Connect to the Internet\".\n"
 "\n"
 "You can however delete already downloaded addons."
 msgstr "Zonder internettoegang kun je geen uitbreidingen downloaden. Ga, als je online wilt spelen, naar Instellingen --> Uiterlijk en kies de optie 'Verbinden met het internet'.\n\nWél kun je reeds gedownloade uitbreidingen verwijderen."
 
-#: src/states_screens/main_menu_screen.cpp:559
+#: src/states_screens/main_menu_screen.cpp:570
 msgid "The add-ons module is currently disabled in the Options screen"
 msgstr "De uitbreidingenmodule is momenteel uitgeschakeld op de instellingenpagina."
 
-#: src/states_screens/main_menu_screen.cpp:571
+#: src/states_screens/main_menu_screen.cpp:582
 msgid "Please wait while the add-ons are loading"
 msgstr "Bezig met laden van uitbreidingen; even geduld..."
 
@@ -5244,11 +5257,26 @@ msgstr "Weet je zeker dat je deze configuratie permanent wilt verwijderen?"
 
 #. I18N: Tooltip in the UI menu. Use enough linebreaks to make sure the text
 #. fits the screen in low resolutions.
-#: src/states_screens/options/options_screen_general.cpp:110
+#: src/states_screens/options/options_screen_general.cpp:113
 msgid ""
 "In multiplayer mode, players can select handicapped\n"
 "(more difficult) profiles on the kart selection screen"
 msgstr "In meerderespelersmodus kunnen spelers een extra moeilijkheidsgraad (handicaps)\ninstellen op het kartselectiescherm."
+
+#. I18N: For mobile version for STK, uninstall the downloaded assets
+#: src/states_screens/options/options_screen_general.cpp:123
+msgid "Uninstall full game assets"
+msgstr "Alle spelelementen verwijderen"
+
+#. I18N: For mobile version for STK, install the full game assets which
+#. will download from stk server
+#: src/states_screens/options/options_screen_general.cpp:129
+msgid "Install full game assets"
+msgstr "Alle spelelementen installeren"
+
+#: src/states_screens/options/options_screen_general.cpp:256
+msgid "Are you sure to uninstall full game assets?"
+msgstr "Weet je zeker dat je alle spelelementen wilt verwijderen?"
 
 #: src/states_screens/options/options_screen_input.cpp:104
 msgid "Gamepad"
