--- a/data/po/tr.po
+++ b/data/po/tr.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: SuperTuxKart\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-07-24 15:48+0800\n"
-"PO-Revision-Date: 2019-07-24 16:41+0000\n"
+"POT-Creation-Date: 2019-08-08 16:41+0800\n"
+"PO-Revision-Date: 2019-08-12 07:32+0000\n"
 "Last-Translator: Serdar Sağlam <teknomobil@msn.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/supertuxkart/supertuxkart/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -3253,7 +3253,7 @@ msgstr "Yarışı tamamladınız!"
 msgid "%s left the game."
 msgstr "%s oyundan ayrıldı."
 
-#: src/main.cpp:1866
+#: src/main.cpp:1840
 msgid ""
 "SuperTuxKart may connect to a server to download add-ons and notify you of "
 "updates. We also collect anonymous hardware statistics to help with the "
@@ -3264,16 +3264,16 @@ msgid ""
 "statistics\")."
 msgstr "SuperTuxKart, eklentileri indirmek ve güncellemeleri size bildirmek için bir sunucuya bağlanabilir. STK'nın gelişimine yardımcı olmak için anonim donanım istatistikleri de topluyoruz. Lütfen gizlilik politikamızı http://privacy.supertuxkart.net adresinden okuyun. Bu özelliğin etkinleştirilmesini ister misiniz? (Bu ayarı daha sonra değiştirmek için, seçeneklere gidin, 'Genel' sekmesini seçin ve \"İnternete bağlan\" ve \"İsimsiz donanım istatistikleri istatistiklerini gönder\" i düzenleyin)."
 
-#: src/main.cpp:2134
+#: src/main.cpp:2108
 msgid "Your screen resolution is too low to run STK."
 msgstr "STK'yı çalıştırmak için ekran çözünürlüğü çok düşük."
 
-#: src/main.cpp:2166
+#: src/main.cpp:2140
 msgid ""
 "Your driver version is too old. Please install the latest video drivers."
 msgstr "Sürücünüz çok eski. Lütfen enson ekran sürücülerini yükleyin."
 
-#: src/main.cpp:2184
+#: src/main.cpp:2158
 #, c-format
 msgid ""
 "Your graphics driver appears to be very old. Please check if an update is "
@@ -3700,7 +3700,7 @@ msgid "Please wait while addons are updated"
 msgstr "Eklentiler güncelleninceye kadar bekleyin"
 
 #: src/states_screens/addons_screen.cpp:498
-#: src/states_screens/main_menu_screen.cpp:564
+#: src/states_screens/main_menu_screen.cpp:575
 msgid ""
 "Sorry, an error occurred while contacting the add-ons website. Make sure you"
 " are connected to the Internet and that SuperTuxKart is not blocked by a "
@@ -4160,6 +4160,7 @@ msgid "featured"
 msgstr "öne çıkan"
 
 #: src/states_screens/dialogs/addons_loading.cpp:174
+#: src/states_screens/dialogs/download_assets.cpp:106
 #, c-format
 msgid "%s MB"
 msgstr "%s MB"
@@ -4170,12 +4171,15 @@ msgstr "%s MB"
 msgid "%s KB"
 msgstr "%s KB"
 
+#. I18N: File size of game assets or addons downloading
 #: src/states_screens/dialogs/addons_loading.cpp:186
+#: src/states_screens/dialogs/download_assets.cpp:108
 #, c-format
 msgid "Size: %s"
 msgstr "Boyut:%s"
 
 #: src/states_screens/dialogs/addons_loading.cpp:294
+#: src/states_screens/dialogs/download_assets.cpp:182
 msgid "Sorry, downloading the add-on failed"
 msgstr "Üzgünüz, eklenti indirme başarısız"
 
@@ -4186,6 +4190,7 @@ msgstr "'%s' eklentisini yüklerken hata."
 
 #: src/states_screens/dialogs/addons_loading.cpp:389
 #: src/states_screens/dialogs/addons_loading.cpp:428
+#: src/states_screens/dialogs/download_assets.cpp:255
 msgid "Try again"
 msgstr "Tekrar dene"
 
@@ -4276,6 +4281,22 @@ msgstr "Yüksek"
 #: src/states_screens/options/options_screen_video.cpp:468
 msgid "Very Low"
 msgstr "Çok Düşük"
+
+#. I18N: In download assets dialog
+#: src/states_screens/dialogs/download_assets.cpp:112
+msgid ""
+"SuperTuxKart will download full assets (including all tracks, high quality "
+"textures and music) for better gaming experience, this will use your mobile "
+"data if you don't have a wifi connection."
+msgstr "SuperTuxKart, daha iyi bir oyun deneyimi için tüm varlıkları (tüm parçalar, yüksek kaliteli dokular ve müzik dahil) indirecek, bir wifi bağlantınız yoksa mobil verilerinizi kullanacaktır."
+
+#. I18N: Shown when there is download error for assets download
+#. in the first run
+#: src/states_screens/dialogs/download_assets.cpp:239
+msgid ""
+"Failed to download assets, check your storage space or internet connection "
+"and try again later."
+msgstr "Varlıklar indirilemedi, depolama alanınızı veya internet bağlantınızı kontrol edip tekrar deneyin."
 
 #: src/states_screens/dialogs/ghost_replay_info_dialog.cpp:145
 #: src/states_screens/ghost_replay_selection.cpp:155
@@ -4594,14 +4615,6 @@ msgstr "Başarıyla oy verildi! Şimdi pencereyi kapatabilirsiniz."
 msgid "Performing vote"
 msgstr "Başarı oylaması"
 
-#. I18N: Shown when there is download error for assets download
-#. in the first run
-#: src/states_screens/download_assets.cpp:204
-msgid ""
-"Failed to download assets, check your storage space or internet connection "
-"and try again later."
-msgstr "Varlıklar indirilemedi, depolama alanınızı veya internet bağlantınızı kontrol edip tekrar deneyin."
-
 #: src/states_screens/easter_egg_screen.cpp:270
 #: src/states_screens/online/tracks_screen.cpp:601
 #: src/states_screens/tracks_and_gp_screen.cpp:290
@@ -4773,30 +4786,30 @@ msgid ""
 "Press the 'Select' button to join the game"
 msgstr "Herkes:\nOyuna katılmak için 'Seç' düğmesine basın"
 
-#: src/states_screens/main_menu_screen.cpp:501
+#: src/states_screens/main_menu_screen.cpp:512
 msgid ""
 "You can not play online without internet access. If you want to play online,"
 " go in the options menu, and check \"Connect to the Internet\"."
 msgstr "İnternet erişimi olmadan çevrimiçi oynayamazsınız. Çevrimiçi oynamak için seçenekler menüsüne gidin ve \"İnternete bağlan\" seçeneğini işaretleyin."
 
-#: src/states_screens/main_menu_screen.cpp:516
+#: src/states_screens/main_menu_screen.cpp:527
 msgid ""
 "You can not download addons without internet access. If you want to download"
 " addons, go in the options menu, and check \"Connect to the Internet\"."
 msgstr "İnternet bağlantısı olmadan eklentileri indiremezsiniz. Eklentileri indirmek istiyorsanız, seçenekler menüsüne gidin ve \"İnternete bağlan\" seçeneğini işaretleyin."
 
-#: src/states_screens/main_menu_screen.cpp:524
+#: src/states_screens/main_menu_screen.cpp:535
 msgid ""
 "You can not download addons without internet access. If you want to download addons, go in the options menu, and check \"Connect to the Internet\".\n"
 "\n"
 "You can however delete already downloaded addons."
 msgstr "İnternet bağlantısı olmadan eklentileri indiremezsiniz. Eklentileri indirmek istiyorsanız, seçenekler menüsüne gidin ve \"İnternete bağlan\" seçeneğini işaretleyin.\n\nAncak önceden indirilmiş eklentileri silebilirsiniz."
 
-#: src/states_screens/main_menu_screen.cpp:559
+#: src/states_screens/main_menu_screen.cpp:570
 msgid "The add-ons module is currently disabled in the Options screen"
 msgstr "Eklentiler modülü şuan Ayarlar ekranından devre dışı bırakılmış"
 
-#: src/states_screens/main_menu_screen.cpp:571
+#: src/states_screens/main_menu_screen.cpp:582
 msgid "Please wait while the add-ons are loading"
 msgstr "Eklentiler yükleninceye kadar bekleyin"
 
@@ -5243,11 +5256,26 @@ msgstr "Bu yapılandırmayı kalıcı olarak silmek istediğinizden emin misiniz
 
 #. I18N: Tooltip in the UI menu. Use enough linebreaks to make sure the text
 #. fits the screen in low resolutions.
-#: src/states_screens/options/options_screen_general.cpp:110
+#: src/states_screens/options/options_screen_general.cpp:113
 msgid ""
 "In multiplayer mode, players can select handicapped\n"
 "(more difficult) profiles on the kart selection screen"
 msgstr "Çok oyunculu kipte, oyuncular handikap seçimi yapabilir\naraç seçim ekranında (daha zor) profiller gibi"
+
+#. I18N: For mobile version for STK, uninstall the downloaded assets
+#: src/states_screens/options/options_screen_general.cpp:123
+msgid "Uninstall full game assets"
+msgstr "Tüm oyun varlıklarını kaldır"
+
+#. I18N: For mobile version for STK, install the full game assets which
+#. will download from stk server
+#: src/states_screens/options/options_screen_general.cpp:129
+msgid "Install full game assets"
+msgstr "Tüm oyun varlıklarını kur"
+
+#: src/states_screens/options/options_screen_general.cpp:256
+msgid "Are you sure to uninstall full game assets?"
+msgstr "Oyun varlıklarının tümü kaldırılacak emin misiniz?"
 
 #: src/states_screens/options/options_screen_input.cpp:104
 msgid "Gamepad"
