--- a/data/po/hu.po
+++ b/data/po/hu.po
@@ -1816,7 +1816,7 @@ msgstr "Személyes kiszolgálók megjelenítése"
 
 #. I18N: ./data/gui/screens/online/server_selection.stkgui
 #. I18N: In the server selection screen
-msgid "Use IPV6 connection if server supports"
+msgid "Use IPv6 connection if server supports"
 msgstr ""
 
 #. I18N: ./data/gui/screens/online/user_search.stkgui
