--- a/data/po/nn.po
+++ b/data/po/nn.po
@@ -1810,7 +1810,7 @@ msgstr "Vis private tenarar"
 
 #. I18N: ./data/gui/screens/online/server_selection.stkgui
 #. I18N: In the server selection screen
-msgid "Use IPV6 connection if server supports"
+msgid "Use IPv6 connection if server supports"
 msgstr ""
 
 #. I18N: ./data/gui/screens/online/user_search.stkgui
