--- a/data/po/sr.po
+++ b/data/po/sr.po
@@ -1819,7 +1819,7 @@ msgstr "Приказуј личне служитеље"
 
 #. I18N: ./data/gui/screens/online/server_selection.stkgui
 #. I18N: In the server selection screen
-msgid "Use IPV6 connection if server supports"
+msgid "Use IPv6 connection if server supports"
 msgstr ""
 
 #. I18N: ./data/gui/screens/online/user_search.stkgui
