--- a/data/po/be.po
+++ b/data/po/be.po
@@ -1814,7 +1814,7 @@ msgstr "Паказваць прыватныя серверы"
 
 #. I18N: ./data/gui/screens/online/server_selection.stkgui
 #. I18N: In the server selection screen
-msgid "Use IPV6 connection if server supports"
+msgid "Use IPv6 connection if server supports"
 msgstr ""
 
 #. I18N: ./data/gui/screens/online/user_search.stkgui
