--- a/data/po/da.po
+++ b/data/po/da.po
@@ -1814,7 +1814,7 @@ msgstr "Vis private servere"
 
 #. I18N: ./data/gui/screens/online/server_selection.stkgui
 #. I18N: In the server selection screen
-msgid "Use IPV6 connection if server supports"
+msgid "Use IPv6 connection if server supports"
 msgstr "Anvend IPv6-forbindelse hvis serveren understøtter det"
 
 #. I18N: ./data/gui/screens/online/user_search.stkgui
