--- a/data/po/el.po
+++ b/data/po/el.po
@@ -1818,7 +1818,7 @@ msgstr "Εμφάνιση ιδιωτικού(ών) server"
 
 #. I18N: ./data/gui/screens/online/server_selection.stkgui
 #. I18N: In the server selection screen
-msgid "Use IPV6 connection if server supports"
+msgid "Use IPv6 connection if server supports"
 msgstr ""
 
 #. I18N: ./data/gui/screens/online/user_search.stkgui
