--- a/data/po/en.po
+++ b/data/po/en.po
@@ -1809,8 +1809,8 @@ msgstr "Show private server(s)"
 
 #. I18N: ./data/gui/screens/online/server_selection.stkgui
 #. I18N: In the server selection screen
-msgid "Use IPV6 connection if server supports"
-msgstr "Use IPV6 connection if server supports"
+msgid "Use IPv6 connection if server supports"
+msgstr "Use IPv6 connection if server supports"
 
 #. I18N: ./data/gui/screens/online/user_search.stkgui
 msgid "User search"
