--- a/data/po/it.po
+++ b/data/po/it.po
@@ -1820,7 +1820,7 @@ msgstr "Mostra i server privati"
 
 #. I18N: ./data/gui/screens/online/server_selection.stkgui
 #. I18N: In the server selection screen
-msgid "Use IPV6 connection if server supports"
+msgid "Use IPv6 connection if server supports"
 msgstr ""
 
 #. I18N: ./data/gui/screens/online/user_search.stkgui
