--- a/data/po/ja.po
+++ b/data/po/ja.po
@@ -1817,7 +1817,7 @@ msgstr "プライベートサーバーを表示"
 
 #. I18N: ./data/gui/screens/online/server_selection.stkgui
 #. I18N: In the server selection screen
-msgid "Use IPV6 connection if server supports"
+msgid "Use IPv6 connection if server supports"
 msgstr ""
 
 #. I18N: ./data/gui/screens/online/user_search.stkgui
