--- a/data/po/ko.po
+++ b/data/po/ko.po
@@ -1812,7 +1812,7 @@ msgstr "개인 서버를 보여주기"
 
 #. I18N: ./data/gui/screens/online/server_selection.stkgui
 #. I18N: In the server selection screen
-msgid "Use IPV6 connection if server supports"
+msgid "Use IPv6 connection if server supports"
 msgstr ""
 
 #. I18N: ./data/gui/screens/online/user_search.stkgui
