--- a/data/po/lt.po
+++ b/data/po/lt.po
@@ -1815,7 +1815,7 @@ msgstr "Rodyti privačius serverius (serverį)"
 
 #. I18N: ./data/gui/screens/online/server_selection.stkgui
 #. I18N: In the server selection screen
-msgid "Use IPV6 connection if server supports"
+msgid "Use IPv6 connection if server supports"
 msgstr ""
 
 #. I18N: ./data/gui/screens/online/user_search.stkgui
