--- a/data/po/ru.po
+++ b/data/po/ru.po
@@ -1817,7 +1817,7 @@ msgstr "Показывать приватные серверы"
 
 #. I18N: ./data/gui/screens/online/server_selection.stkgui
 #. I18N: In the server selection screen
-msgid "Use IPV6 connection if server supports"
+msgid "Use IPv6 connection if server supports"
 msgstr "Использовать протокол IPv6, если сервер поддерживает"
 
 #. I18N: ./data/gui/screens/online/user_search.stkgui
