git commit issue#4070 : Brake/Reverse (French and English)

--- a/data/po/ar.po
+++ b/data/po/ar.po
@@ -5186,7 +5186,7 @@ msgstr "التّسارع"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "المكابح"
 
 #. I18N: Key binding name
