--- a/data/po/be.po
+++ b/data/po/be.po
@@ -5169,7 +5169,7 @@ msgstr "Паскарэнне"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Ехаць назад"
 
 #. I18N: Key binding name
