--- a/data/po/br.po
+++ b/data/po/br.po
@@ -5178,7 +5178,7 @@ msgstr "Herrekaat"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Starderez"
 
 #. I18N: Key binding name
