--- a/data/po/eo.po
+++ b/data/po/eo.po
@@ -5155,7 +5155,7 @@ msgstr "Plirapidigi"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Bremso"
 
 #. I18N: Key binding name
