--- a/data/po/gd.po
+++ b/data/po/gd.po
@@ -5168,7 +5168,7 @@ msgstr "Luathaich"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Brèig"
 
 #. I18N: Key binding name
