--- a/data/po/he.po
+++ b/data/po/he.po
@@ -5174,7 +5174,7 @@ msgstr "האצה"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "בלימה"
 
 #. I18N: Key binding name
