--- a/data/po/hr.po
+++ b/data/po/hr.po
@@ -5157,7 +5157,7 @@ msgstr "Ubrzanje"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Kočnica"
 
 #. I18N: Key binding name
