--- a/data/po/hu.po
+++ b/data/po/hu.po
@@ -5155,7 +5155,7 @@ msgstr "Gyorsítás"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Fékezés"
 
 #. I18N: Key binding name
