--- a/data/po/id.po
+++ b/data/po/id.po
@@ -5147,7 +5147,7 @@ msgstr "Tancap gas"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Rem"
 
 #. I18N: Key binding name
