--- a/data/po/it.po
+++ b/data/po/it.po
@@ -5159,7 +5159,7 @@ msgstr "Accelerare"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Freno"
 
 #. I18N: Key binding name
