--- a/data/po/ko.po
+++ b/data/po/ko.po
@@ -5143,7 +5143,7 @@ msgstr "가속"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "브레이크"
 
 #. I18N: Key binding name
