--- a/data/po/ky.po
+++ b/data/po/ky.po
@@ -5141,7 +5141,7 @@ msgstr "Газ"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Тормоз"
 
 #. I18N: Key binding name
