--- a/data/po/lt.po
+++ b/data/po/lt.po
@@ -5170,7 +5170,7 @@ msgstr "Greitinimas"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Stabdymas"
 
 #. I18N: Key binding name
