--- a/data/po/nl.po
+++ b/data/po/nl.po
@@ -5154,7 +5154,7 @@ msgstr "Versnellen"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Remmen"
 
 #. I18N: Key binding name
