--- a/data/po/sq.po
+++ b/data/po/sq.po
@@ -5149,7 +5149,7 @@ msgstr "Përshpejto"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Frena"
 
 #. I18N: Key binding name
