--- a/data/po/tt.po
+++ b/data/po/tt.po
@@ -5142,7 +5142,7 @@ msgstr "Газ"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Туктау"
 
 #. I18N: Key binding name
