--- a/data/po/uk.po
+++ b/data/po/uk.po
@@ -5167,7 +5167,7 @@ msgstr "Прискорення"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Гальма"
 
 #. I18N: Key binding name
