--- a/data/po/vi.po
+++ b/data/po/vi.po
@@ -5141,7 +5141,7 @@ msgstr "Tăng tốc"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Thắng"
 
 #. I18N: Key binding name
