--- a/data/po/bg.po
+++ b/data/po/bg.po
@@ -5152,7 +5152,7 @@ msgstr "Ускоряване"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Спирачка"
 
 #. I18N: Key binding name
