--- a/data/po/bs.po
+++ b/data/po/bs.po
@@ -5159,7 +5159,7 @@ msgstr "Ubrzaj"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Koči"
 
 #. I18N: Key binding name
