--- a/data/po/da.po
+++ b/data/po/da.po
@@ -5153,7 +5153,7 @@ msgstr "Accelerér"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Brems"
 
 #. I18N: Key binding name
