--- a/data/po/de.po
+++ b/data/po/de.po
@@ -5167,7 +5167,7 @@ msgstr "Beschleunigen"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Bremsen"
 
 #. I18N: Key binding name
