--- a/data/po/el.po
+++ b/data/po/el.po
@@ -5157,7 +5157,7 @@ msgstr "Επιτάχυνση"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Φρένο"
 
 #. I18N: Key binding name
