--- a/data/po/es.po
+++ b/data/po/es.po
@@ -5153,7 +5153,7 @@ msgstr "Acelerar"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Frenar"
 
 #. I18N: Key binding name
