--- a/data/po/fi.po
+++ b/data/po/fi.po
@@ -5151,7 +5151,7 @@ msgstr "Kiihdytä"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Jarruta"
 
 #. I18N: Key binding name
