--- a/data/po/fr.po
+++ b/data/po/fr.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the supertuxkart package.
-# 
+#
 # Translators:
 # adrien vigneron <adrienvigneron@ml1.net>, 2015
 # Alayan <alayan.feh@gmail.com>, 2018-2019
@@ -5160,8 +5160,8 @@ msgstr "Accélérer"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
-msgstr "Freiner"
+msgid "Brake/Reverse"
+msgstr "Freiner/Reculer"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:275
