--- a/data/po/gl.po
+++ b/data/po/gl.po
@@ -5152,7 +5152,7 @@ msgstr "Acelerar"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Freo"
 
 #. I18N: Key binding name
