--- a/data/po/ja.po
+++ b/data/po/ja.po
@@ -5148,7 +5148,7 @@ msgstr "加速"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "ブレーキ"
 
 #. I18N: Key binding name
