--- a/data/po/krl.po
+++ b/data/po/krl.po
@@ -5149,7 +5149,7 @@ msgstr "Gazuiče"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Tormozi"
 
 #. I18N: Key binding name
