--- a/data/po/kw.po
+++ b/data/po/kw.po
@@ -5159,7 +5159,7 @@ msgstr "Uskishe"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Fronna"
 
 #. I18N: Key binding name
