--- a/data/po/lv.po
+++ b/data/po/lv.po
@@ -5157,7 +5157,7 @@ msgstr "Paātrināt"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Bremzēt"
 
 #. I18N: Key binding name
