--- a/data/po/nb.po
+++ b/data/po/nb.po
@@ -5152,7 +5152,7 @@ msgstr "Akselerer"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Brems"
 
 #. I18N: Key binding name
