--- a/data/po/pt.po
+++ b/data/po/pt.po
@@ -5156,7 +5156,7 @@ msgstr "Acelerar"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Travão"
 
 #. I18N: Key binding name
