--- a/data/po/ro.po
+++ b/data/po/ro.po
@@ -5158,7 +5158,7 @@ msgstr "Accelereație"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Frână"
 
 #. I18N: Key binding name
