--- a/data/po/sk.po
+++ b/data/po/sk.po
@@ -5169,7 +5169,7 @@ msgstr "Zrýchliť"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Brzda"
 
 #. I18N: Key binding name
