--- a/data/po/sl.po
+++ b/data/po/sl.po
@@ -5167,7 +5167,7 @@ msgstr "Pospešek"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Zavora"
 
 #. I18N: Key binding name
