--- a/data/po/sr.po
+++ b/data/po/sr.po
@@ -5166,7 +5166,7 @@ msgstr "Убрзај"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Кочи"
 
 #. I18N: Key binding name
