--- a/data/po/sv.po
+++ b/data/po/sv.po
@@ -5156,7 +5156,7 @@ msgstr "Gasa"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Bromsa"
 
 #. I18N: Key binding name
