--- a/data/po/sw.po
+++ b/data/po/sw.po
@@ -5149,7 +5149,7 @@ msgstr "Badilisha mbio"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Punguza mwendo"
 
 #. I18N: Key binding name
