--- a/data/po/tr.po
+++ b/data/po/tr.po
@@ -5153,7 +5153,7 @@ msgstr "Hızlandırıcı"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "Fren"
 
 #. I18N: Key binding name
