--- a/data/po/zh_CN.po
+++ b/data/po/zh_CN.po
@@ -5147,7 +5147,7 @@ msgstr "加速"
 
 #. I18N: Key binding name
 #: src/states_screens/options/options_screen_device.cpp:272
-msgid "Brake"
+msgid "Brake/Reverse"
 msgstr "刹车"
 
 #. I18N: Key binding name
