More word and typo fixes in man/'-h' 	modified:   doc/supertuxkart.1 	modified:   src/main.cpp

--- a/doc/supertuxkart.1
+++ b/doc/supertuxkart.1
@@ -227,7 +227,7 @@ Start a LAN server (not a playing client).
 .PP
 .BR \-\-server\-password=PASS
 .RS 4
-Sets a password for a server (both client&server).
+Sets a password for a server (both client and server).
 .RE
 .PP
 .BR \-\-connect\-now=IP
@@ -245,13 +245,13 @@ public port.
 .PP
 .BR \-\-server\-id=N
 .RS 4
-Server id in STK addons for. "\-\-connect\-now".
+Server id in STK addons for "\-\-connect\-now".
 .RE
 .PP
 .BR \-\-network\-ai=N
 .RS 4
 Numbers of AI for connecting to linear race server, used
-together with. "\-\-connect\-now".
+together with "\-\-connect\-now".
 .RE
 .PP
 .BR \-\-login=S
@@ -291,7 +291,7 @@ Maximum number of clients (server only).
 .PP
 .BR \-\-min\-players=N
 .RS 4
-Minimum number of clients for owner less server(server only).
+Minimum number of clients for ownerless server (server only).
 .RE
 .PP
 .BR \-\-motd
@@ -342,18 +342,18 @@ Server will submit ranking to STK addons server.
 .PP
 .BR \-\-no\-ranked
 .RS 4
-Server will not submit ranking to STK addons server.
-You require permission for that.
+Server will not submit ranking to STK addons server. You
+require permission for that.
 .RE
 .PP
 .BR \-\-owner\-less
 .RS 4
-Race will auto start and no one can kick players in server.
+Race will autostart and no one can kick players in server.
 .RE
 .PP
 .BR \-\-no\-owner\-less
 .RS 4
-Race will not auto start and server owner can kick players in server.
+Race will not autostart and server owner can kick players in server.
 .RE
 .PP
 .BR \-\-firewalled\-server
@@ -554,8 +554,8 @@ strings to opengl, which can be seen later in apitrace.
 .SH "AUTHOR"
 .PP
 This manual page was based an earlier one written by Gonéri Le Bouder
-<goneri@rulezlan.org> (2006, GPLv2) for the GNU/Linux Debian Operation System,
-in addition to the official SuperTuxKart command-line options. Steve Baker
+<goneri@rulezlan.org> (2006, GPLv2) for the GNU/Linux Debian Operating System,
+in addition to the official SuperTuxKart command-line options, Steve Baker
 <sjbaker1@airmail.net> (2004-2015, GPL v3), Joerg Henrichs, Marianne Gagnon
 (2011-2015, GPLv3). Edited by J. T-Katiska (2019, GPLv3).
 
