--- a/data/po/be.po
+++ b/data/po/be.po
@@ -1488,8 +1488,8 @@ msgstr "Максімальная хуткасць - чым яна больш, т
 #. I18N: ./data/gui/screens/help6.stkgui
 #. I18N: In the help menu
 msgid ""
-"Nitro consumption - the lower it is, the more speed you can get from a can "
-"of nitro. The lighter the kart, the lower its nitro consumption."
+"Nitro efficiency - The higher it is, the more speed you get from a "
+"can of nitro. A lighter kart will have higher nitro efficiency."
 msgstr "Спажыванне нітра - чым яно меншае, тым большую хуткасць вы можаце атрымаць ад аднаго нітра-зарада. Чым лягчэйшы карт, тым меншае спажыванне нітра ён мае."
 
 #. I18N: ./data/gui/screens/help6.stkgui
