--- a/data/po/bs.po
+++ b/data/po/bs.po
@@ -1485,8 +1485,8 @@ msgstr "Maksimalna brzina - Što je veća, kart može brže ići. Posebno korisn
 #. I18N: ./data/gui/screens/help6.stkgui
 #. I18N: In the help menu
 msgid ""
-"Nitro consumption - the lower it is, the more speed you can get from a can "
-"of nitro. The lighter the kart, the lower its nitro consumption."
+"Nitro efficiency - The higher it is, the more speed you get from a "
+"can of nitro. A lighter kart will have higher nitro efficiency."
 msgstr "Korišćenje nitra - što je manje, više brzine možete dobiti iz boce nitra. Što je lakši kart, manje je korišćenje nitra."
 
 #. I18N: ./data/gui/screens/help6.stkgui
