--- a/data/po/th.po
+++ b/data/po/th.po
@@ -1485,8 +1485,8 @@ msgstr "ความเร็วสูงสุด - ยิ่งสูงเท
 #. I18N: ./data/gui/screens/help6.stkgui
 #. I18N: In the help menu
 msgid ""
-"Nitro consumption - the lower it is, the more speed you can get from a can "
-"of nitro. The lighter the kart, the lower its nitro consumption."
+"Nitro efficiency - The higher it is, the more speed you get from a "
+"can of nitro. A lighter kart will have higher nitro efficiency."
 msgstr "การใช้ไนโตร - ยิ่งต่ำเท่าไหร่ความเร็วยิ่งมากขึ้นที่คุณจะได้รับจากไนโตร รถแข่งที่มีน้ำหนักเบาก็จะยิ่งลดการใช้ไนโตร"
 
 #. I18N: ./data/gui/screens/help6.stkgui
