--- a/data/po/zh_TW.po
+++ b/data/po/zh_TW.po
@@ -1492,8 +1492,8 @@ msgstr "最大速度 - 這個值愈高，卡丁車就能跑得愈快。在直線
 #. I18N: ./data/gui/screens/help6.stkgui
 #. I18N: In the help menu
 msgid ""
-"Nitro consumption - the lower it is, the more speed you can get from a can "
-"of nitro. The lighter the kart, the lower its nitro consumption."
+"Nitro efficiency - The higher it is, the more speed you get from a "
+"can of nitro. A lighter kart will have higher nitro efficiency."
 msgstr "氮氣消耗 - 這個值愈低，你從氮氣罐取得的速度就愈多。較輕的賽車會有較低的氮氣消耗。"
 
 #. I18N: ./data/gui/screens/help6.stkgui
