Improve english source

--- a/data/po/supertuxkart.pot
+++ b/data/po/supertuxkart.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: supertuxkart\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-07-10 12:11+0800\n"
+"POT-Creation-Date: 2020-07-10 13:07+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -352,7 +352,7 @@ msgstr ""
 
 #. I18N: ./data/gui/dialogs/custom_camera_settings.stkgui
 #. I18N: In the ui/camera screen
-msgid "Smoothing"
+msgid "Smooth camera"
 msgstr ""
 
 #. I18N: ./data/gui/dialogs/custom_camera_settings.stkgui
