--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-supertuxkart (1.2) UNRELEASED; urgency=medium
+supertuxkart (1.2-1) UNRELEASED; urgency=medium
 
   * New Build
+  * 
 
  -- CyberVitexus <vitex@exiv.jinonice.czf>  Sat, 29 Aug 2020 07:27:44 +0200
 
