--- a/data/po/supertuxkart.pot
+++ b/data/po/supertuxkart.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: supertuxkart\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-04 13:50+0800\n"
+"POT-Creation-Date: 2020-12-08 08:58+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -206,6 +206,12 @@ msgstr ""
 #. I18N: Control type
 #: src/states_screens/dialogs/race_paused_dialog.cpp:515
 msgid "Steering wheel"
+msgstr ""
+
+#. I18N: ./data/gui/dialogs/android/init_android.stkgui
+#. I18N: ./data/gui/dialogs/android/multitouch_settings.stkgui
+#. I18N: In the multitouch settings screen
+msgid "Auto acceleration"
 msgstr ""
 
 #. I18N: ./data/gui/dialogs/android/init_android.stkgui
@@ -2460,11 +2466,11 @@ msgid "Puffy"
 msgstr ""
 
 #. I18N: ../stk-assets/karts/sara_the_racer/kart.xml
-msgid "Sara the Racer"
+msgid "Pepper"
 msgstr ""
 
 #. I18N: ../stk-assets/karts/sara_the_wizard/kart.xml
-msgid "Sara the Wizard"
+msgid "Sara"
 msgstr ""
 
 #. I18N: ../stk-assets/karts/suzanne/kart.xml
